Address issue #1562 and also sanitize the metrics names to be valid for Prometheus/Victoria integration